# sshm

./: .gitignore  AUTHORS  ChangeLog  README.md  configure  configure.in
.github/workflows/: c-cpp-ci.yml  c-cpp-release.yml  c-cpp.yml  c-cpp.yml.orig
debian/: autoreconf.after  autoreconf.before  control  copyright  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  sshm.cron.d.ex  sshm.doc-base.ex  sshm.substvars  watch.ex
debian/.debhelper/sshm/: dbgsym-build-ids
debian/.debhelper/sshm/dbgsym-root/DEBIAN/: control  md5sums
debian/sshm/DEBIAN/: control  md5sums
debian/upstream/: metadata.ex
man/: sshm.1
src/: Action.cpp  Action.h  Check.cpp  Check.h  Connect.cpp  Connect.h  Makefile.am  Makefile.in  Parameter.cpp  Parameter.h  Search.cpp  Search.h  sshm.cpp  sshm.h
