bin_PROGRAMS = sshm
sshm_SOURCES = sshm.cpp Parameter.cpp Check.cpp Connect.cpp Search.cpp \
	Action.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
sshm_LDFLAGS = $(all_libraries) 
noinst_HEADERS = sshm.h Parameter.h Check.h Connect.h Search.h Action.h
